# libhello

./: .gitignore  Makefile  README.md  hello.h  main.c
include/: hello.h
src/: hello.c
test/: CMakeLists.txt  hello_test.cc
